--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,31 +1,24 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: moechs # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
+  - name: Plus Repo
+    url: https://repo.plus
+  - name: Plus Repo TCP Ping
+    url: repo.plus
+    port: 443
     check: "tcp-ping"
-    ipv6: true
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: uptime.repo.plus
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Uptime monitor and status page**"
+  # introMessage: 
   navbar:
     - title: Status
       href: /
@@ -34,3 +27,11 @@ status-website:
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
+workflowSchedule:
+  graphs: "0 16 * * *"
+  responseTime: "0 15 * * *"
+  staticSite: "0 17 * * *"
+  summary: "0 16 * * *"
+  updateTemplate: "0 16 * * *"
+  updates: "0 18 * * *"
+  uptime: "*/10 * * * *"
